# stable_deref_trait

./: Cargo.toml
src/: lib.rs
