[package]
name = "stable_deref_trait"
version = "1.1.1"
authors = ["Robert Grosse <n210241048576@gmail.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/storyyeller/stable_deref_trait"
documentation = "https://docs.rs/stable_deref_trait/1.1.1/stable_deref_trait"
categories = ["memory-management", "no-std"]
description = """
An unsafe marker trait for types like Box and Rc that dereference to a stable address even when moved, and hence can be used with libraries such as owning_ref and rental.
"""

[features]
default = ["std"]
std = ["alloc"]
alloc = []

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_tstd = { version = "1.0", rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git", features=["untrusted_fs","thread", "backtrace"] }
sgx_libc = { version = "1.0", rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
